Gradle requires JDK7 to build the project

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ script: ./gradlew build
 jdk:
     - oraclejdk8
     - oraclejdk7
-    - openjdk6
+# Gradle requires JDK7 to build the project
+#    - openjdk6
 
 notifications:
   slack: reportportal:fl6xWHVQp1jvsMmCJxYW9YKP
