--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ apply from: 'release.gradle'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
-description = 'TestNG client'
+description = 'TestNG Agent'
+
 repositories {
     jcenter()
     mavenLocal()
@@ -16,7 +17,8 @@ repositories {
 }
 
 dependencies {
-    compile 'com.epam.reportportal:client-java-core:3.0.0-SNAPSHOT'
+    compile 'com.epam.reportportal:client-java:3.0.0-BETA-1'
+    compile 'com.epam.reportportal:commons-model:3.0.0-BETA-1'
     compileOnly 'org.testng:testng:6.11'
 }
 
