--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 
 dependencies {
     compile 'com.epam.reportportal:client-java:4.0.0-BETA-1'
-    compile 'com.epam.reportportal:commons-model:4.0.0'
+    compile 'com.github.reportportal:commons-model:36edbf5'
     compileOnly 'org.testng:testng:6.13.1'
 }
 
