add one more repository to gradle script

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ description = 'TestNG Agent'
 repositories {
     jcenter()
     mavenLocal()
+    mavenCentral()
     maven { url "http://dl.bintray.com/epam/reportportal" }
     maven { url "https://jitpack.io" }
 }
