change RP URL to https

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
     jcenter()
     mavenLocal()
     mavenCentral()
-    maven { url "http://dl.bintray.com/epam/reportportal" }
+    maven { url "https://dl.bintray.com/epam/reportportal" }
     maven { url "https://jitpack.io" }
 }
 
