update build script repositories

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
     repositories {
-        jcenter()
-        mavenLocal()
+        maven { url("https://plugins.gradle.org/m2/") }
     }
 }
 plugins {
