--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,14 @@ buildscript {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
     }
+
+    dependencies {
+        classpath 'net.researchgate:gradle-release:2.4.1'
+    }
 }
 
 plugins {
-    id 'net.researchgate.release' version '2.6.0'
+    id 'net.researchgate.release' version '2.4.1'
     id "com.jfrog.bintray" version "1.8.4"
 }
 apply plugin: 'java'
