--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
     compile 'com.epam.reportportal:client-java:4.0.9'
-    compile 'com.epam.reportportal:commons-model:4.2.0'
+    compile 'com.github.reportportal:commons-model:46bda6e'
     compile 'org.testng:testng:6.14.3'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
