--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,9 @@ repositories {
 }
 
 dependencies {
-    compile 'com.epam.reportportal:client-java:4.0.9'
-    compile 'com.github.reportportal:commons-model:46bda6e'
+//    compile 'com.epam.reportportal:client-java:4.0.9'
+    compile 'com.github.reportportal:commons-model:48e54ba'
+    compile 'com.github.reportportal:client-java:bbf173d4'
     compile 'org.testng:testng:6.14.3'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
