--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ repositories {
 
 dependencies {
 //    compile 'com.epam.reportportal:client-java:4.0.9'
-    compile 'com.github.reportportal:commons-model:48e54ba'
-    compile 'com.github.reportportal:client-java:540f524'
+    compile 'com.github.reportportal:commons-model:284f32'
+    compile 'com.github.reportportal:client-java:2a780e29'
     compile 'org.testng:testng:6.14.3'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
