--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,24 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
+configurations {
+    agent
+}
+
+test {
+
+    doFirst {
+        jvmArgs("-javaagent:${configurations.agent.singleFile}")
+
+    }
+}
+
 dependencies {
 //    compile 'com.epam.reportportal:client-java:4.0.9'
+    agent "org.aspectj:aspectjweaver:1.9.2"
+    compile "org.aspectj:aspectjrt:1.9.2"
     compile 'com.github.reportportal:commons-model:48e54ba'
-    compile 'com.github.reportportal:client-java:540f524'
+    compile 'com.github.reportportal:client-java:4ea1d5d5'
     compile 'org.testng:testng:6.14.3'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
