--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ repositories {
 
 dependencies {
 //    compile 'com.epam.reportportal:client-java:4.0.9'
-    compile 'com.github.reportportal:commons-model:3a22b5'
-    compile 'com.github.reportportal:client-java:2993435'
+    compile 'com.github.reportportal:commons-model:d1a88af86'
+    compile 'com.github.reportportal:client-java:47a9c98b'
     compile 'org.testng:testng:6.14.3'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
