--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ repositories {
 
 dependencies {
 //    compile 'com.epam.reportportal:client-java:4.0.9'
-    compile 'com.github.reportportal:commons-model:1beaefed'
-    compile 'com.github.reportportal:client-java:ecd9415'
+    compile 'com.github.reportportal:commons-model:5.0.0-BETA-6'
+    compile 'com.github.reportportal:client-java:45a59c1'
     compile 'org.testng:testng:6.14.3'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
