--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
 //    compile 'com.epam.reportportal:client-java:4.0.9'
-    compile 'com.github.reportportal:commons-model:1d72a05'
+    compile 'com.github.reportportal:commons-model:5.0.0-BETA-6'
     compile 'com.github.reportportal:client-java:45a59c1d'
     compile 'org.testng:testng:6.14.3'
 
