--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ dependencies {
         compile 'com.epam.reportportal:client-java:4.0.16'
         compile 'com.epam.reportportal:commons-model:5.0.0-BETA-6'
     } else {
-        compile 'com.github.reportportal:client-java:d5b45'
-        compile 'com.github.reportportal:commons-model:9a6488a'
+        compile 'com.github.reportportal:client-java:024235c'
+        compile 'com.github.reportportal:commons-model:80d27d4'
     }
 
     compile 'org.testng:testng:6.14.3'
