--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,12 @@ buildscript {
 }
 
 plugins {
-    id 'net.researchgate.release' version '2.6.0'
+    id 'net.researchgate.release' version '2.8.0'
     id "com.jfrog.bintray" version "1.8.4"
 }
 apply plugin: 'java'
 apply from: 'release.gradle'
+
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
@@ -25,7 +26,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.epam.reportportal:client-java:4.0.18'
+    compile 'com.epam.reportportal:client-java:4.0.19'
     compile 'com.epam.reportportal:commons-model:4.2.0'
     compile 'org.testng:testng:7.0.0'
 
@@ -38,4 +39,10 @@ dependencies {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '5.4.1'
+}
+
+release {
+    git {
+        requireBranch = 'v4-hotfix'
+    }
 }
