--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,24 @@
 apply plugin: 'java'
-apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/release-commons.gradle'
 
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+project.ext.releaseMode = project.hasProperty('releaseMode')
 
-project.ext {
-    releaseMode = project.hasProperty("releaseMode")
-}
+def branch = releaseMode ? '5.0.0' : 'develop'
+apply from: "https://raw.githubusercontent.com/reportportal/gradle-scripts/$branch/build-quality.gradle"
+apply from: "https://raw.githubusercontent.com/reportportal/gradle-scripts/$branch/release-commons.gradle"
 
-description = 'TestNG Agent'
+sourceCompatibility = JavaVersion.VERSION_1_6
+targetCompatibility = JavaVersion.VERSION_1_6
 
 repositories {
     jcenter()
     mavenCentral()
-    maven { url "https://dl.bintray.com/epam/reportportal" }
-    maven { url "https://jitpack.io" }
+    releaseMode ? maven { url "https://dl.bintray.com/epam/reportportal" } : maven { url "https://jitpack.io" }
 }
 
 dependencies {
     if (releaseMode) {
-        compile 'com.epam.reportportal:client-java:5.0.0-BETA-4'
-        compile 'com.epam.reportportal:commons-model:5.0.0-BETA-11'
+        compile 'com.epam.reportportal:client-java:5.0.0-BETA-7'
+        compile 'com.epam.reportportal:commons-model:5.0.0'
     } else {
         compile 'com.github.reportportal:client-java:da8fb0f5b'
         compile 'com.github.reportportal:commons-model:998f112'
@@ -37,3 +35,5 @@ dependencies {
 wrapper {
     gradleVersion = '5.4.1'
 }
+
+afterReleaseBuild.dependsOn bintrayUpload
