--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,14 @@ dependencies {
         compile 'com.epam.reportportal:client-java:5.0.0-BETA-10'
         compile 'com.epam.reportportal:commons-model:5.0.0'
     } else {
-        compile 'com.github.reportportal:client-java:8825155'
+        compile 'com.github.reportportal:client-java:5.0.0-BETA-10'
         compile 'com.github.reportportal:commons-model:5.0.0'
     }
 
     compile 'org.testng:testng:6.14.3'
 
+    testCompile 'ch.qos.logback:logback-classic:1.2.3'
+    testCompile 'com.epam.reportportal:logger-java-logback:5.0.0-BETA-9'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
