Properties file update

--- a/src/test/resources/reportportal.properties
+++ b/src/test/resources/reportportal.properties
@@ -2,4 +2,5 @@ rp.endpoint = http://example.com
 rp.uuid = uuid
 rp.launch = launch
 rp.project = project
+rp.reporting.async=true
 rp.reporting.callback=true
