Updating on JUnit5, fixing tests

--- a/src/test/resources/reportportal.properties
+++ b/src/test/resources/reportportal.properties
@@ -4,3 +4,5 @@ rp.launch = launch
 rp.project = project
 rp.reporting.async=true
 rp.reporting.callback=true
+rp.batch.size.logs=1
+rp.client.join=false
