--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     testImplementation ('com.epam.reportportal:logger-java-logback:5.0.0-BETA-9') {
         exclude module: 'client-java'
     }
+
+    testImplementation 'org.apache.commons:commons-io:1.3.2'
 }
 
 test {
