--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     }
 
     testImplementation 'org.apache.commons:commons-io:1.3.2'
+
+    testImplementation 'com.ibm.icu:icu4j:67.1'
 }
 
 test {
