--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenLocal()
-    jcenter()
     mavenCentral()
-    releaseMode ? maven { url "https://dl.bintray.com/epam/reportportal" } : maven { url "https://jitpack.io" }
+    maven { url "https://dl.bintray.com/epam/reportportal" }
+    jcenter()
 }
 
 project.ext.githubUserName = project.hasProperty('githubUserName') ? githubUserName : ""
