--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,7 @@ jobs:
 
       - name: Merge release tags into develop
         id: mergeIntoDevelop
-        if: ${{github.ref == 'master'}}
+        if: ${{github.ref}} == 'master'
         run: |
           git checkout develop
           git merge -m 'Merge master branch into develop after a release' master
