--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,7 +104,7 @@ jobs:
         id: mergeIntoDevelop
         if: ${{github.ref}} == 'master'
         run: |
-          git merge -m 'Merge master branch into develop after a release' master
+          git merge -m 'Merge master branch into develop after a release' origin/master
           merge_errors=$(git status | grep 'both modified')
           [[ ! -z "$merge_errors" ]] && echo -e "::error::Unable to merge files: \n${$merge_errors}" && exit 1
           git push
