--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,6 +99,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 'develop'
+          fetch-depth: 0
 
       - name: Merge release branch into develop
         id: mergeIntoDevelop
