--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,4 +107,4 @@ jobs:
         run: |
           git merge -m 'Merge master branch into develop after a release' origin/master
           merge_errors=$(git status | grep 'both modified')
-          git push
+          git push origin develop
