--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,25 @@ targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenLocal()
-    jcenter()
     mavenCentral()
-    releaseMode ? maven { url "https://dl.bintray.com/epam/reportportal" } : maven { url "https://jitpack.io" }
+    maven { url "https://dl.bintray.com/epam/reportportal" }
+    jcenter()
+}
+
+project.ext.githubUserName = project.hasProperty('githubUserName') ? githubUserName : ""
+project.ext.githubToken = project.hasProperty('githubToken') ? githubToken : ""
+
+publishing {
+    repositories {
+        maven {
+            name = "TestNG GitHub Packages"
+            url = uri("https://maven.pkg.github.com/reportportal/agent-java-testNG")
+            credentials {
+                username = githubUserName
+                password = githubToken
+            }
+        }
+    }
 }
 
 processResources {
@@ -37,13 +53,8 @@ processResources {
 }
 
 dependencies {
-    if (releaseMode) {
-        implementation 'com.epam.reportportal:client-java:5.0.1'
-        implementation 'com.epam.reportportal:commons-model:5.0.0'
-    } else {
-        implementation 'com.epam.reportportal:client-java:5.0.1'
-        implementation 'com.github.reportportal:commons-model:5.0.0'
-    }
+    implementation 'com.epam.reportportal:client-java:5.0.1'
+    implementation 'com.epam.reportportal:commons-model:5.0.0'
 
     implementation 'org.testng:testng:7.1.0'
 
@@ -81,10 +92,12 @@ wrapper {
     gradleVersion = '5.4.1'
 }
 
-afterReleaseBuild.dependsOn bintrayUpload
-
 release {
     git {
         requireBranch = 'master'
     }
 }
+
+def releaseDependencies = [bintrayUpload, publish]
+releaseDependencies.addAll(afterReleaseBuild.getDependsOn())
+afterReleaseBuild.setDependsOn(releaseDependencies)
