--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ repositories {
     mavenCentral()
     maven { url "https://dl.bintray.com/epam/reportportal" }
     jcenter()
+    maven { url "https://jitpack.io" }
 }
 
 project.ext.githubUserName = project.hasProperty('githubUserName') ? githubUserName : ""
@@ -58,6 +59,8 @@ dependencies {
 
     implementation 'org.testng:testng:7.1.0'
 
+    testImplementation('com.github.reportportal:agent-java-test-utils:ddcf50ee20')
+
     testImplementation ('org.junit.platform:junit-platform-runner:1.6.2') {
         exclude module: 'junit'
     }
@@ -77,7 +80,6 @@ dependencies {
     }
 
     testImplementation 'org.apache.commons:commons-io:1.3.2'
-
     testImplementation 'com.ibm.icu:icu4j:67.1'
 }
 
