--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ env:
   README_FILE: README.md
   README_TEMPLATE_FILE: README_TEMPLATE.md
   README_VERSION_PLACEHOLDER: <artifact_version>
-  VERSION_EXTRACT_PATTERN: (?<=\.)[0-9]+(?=-)(?!(?:[^-]*-)*(?:ALPHA|BETA|RC))|(?<=-ALPHA)[0-9]+(?=-)|(?<=-BETA)[0-9]+(?=-)|(?<=-RC)[0-9]+(?=-)
+  VERSION_EXTRACT_PATTERN: (?<=\.)[0-9]+(?=-)(?!(?:[^-]*-)*(?:ALPHA|BETA|RC))|(?<=-ALPHA-)[0-9]+(?=-)|(?<=-BETA-)[0-9]+(?=-)|(?<=-RC-)[0-9]+(?=-)
 
 jobs:
   release:
