--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,28 +37,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Get current version
-        id: getVersion
-        run: |
-          version=$(cat ${{env.VERSION_FILE}} | grep version | sed -e 's/^version=//')
-          echo "${version}"
-          echo "::set-env name=VERSION::${version}"
-
-      - name: Generate release version
-        id: generateReleaseVersion
-        run: |
-          release_version=$(echo "${{ env.VERSION }}" | sed -e 's/-SNAPSHOT//i')
-          echo "${release_version}"
-          echo "::set-env name=RELEASE_VERSION::${release_version}"
-
-      - name: Generate new version
-        id: generateNewVersion
-        run: |
-          patch_version=$(python -c 'import re;import sys;print(re.search(r"${{ env.VERSION_EXTRACT_PATTERN }}", sys.argv[1]).group(0))' ${{ env.VERSION }})
-          let "patch_version++"
-          new_version=$(python -c 'import re;import sys;print(re.sub(r"${{ env.VERSION_EXTRACT_PATTERN }}", sys.argv[2], sys.argv[1]))' ${{ env.VERSION }} ${patch_version})
-          echo "${new_version}"
-          echo "::set-env name=NEW_VERSION::${new_version}"
+      - name: Generate versions
+        uses: HardNorth/github-version-generate@v1.0.1
+        with:
+          version-source: file
+          version-file: gradle.properties
+          version-file-extraction-pattern: '(?<=version=).+'
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
@@ -79,7 +63,7 @@ jobs:
         id: release
         run: |
           ./gradlew release -PreleaseMode -Prelease.useAutomaticVersion=true -Prelease.releaseVersion=${{env.RELEASE_VERSION}} \
-          -Prelease.newVersion=${{env.NEW_VERSION}} -PbintrayUser=${{secrets.BINTRAY_USER}} -PbintrayApiKey=${{secrets.BINTRAY_API_KEY}} \
+          -Prelease.newVersion=${{env.NEXT_VERSION}} -PbintrayUser=${{secrets.BINTRAY_USER}} -PbintrayApiKey=${{secrets.BINTRAY_API_KEY}} \
           -PgithubUserName=${{env.GH_USER_NAME}} -PgithubToken=${{secrets.GITHUB_TOKEN}}
 
       - name: Update README.md
